# ur_arm_control_cpp

./: .gitignore  CMakeLists.txt  package.xml
config/: initial_positions.yaml  moveit_ur_arm_servoing_2.rviz  moveit_ur_arm_servoing_3.rviz  my_robot_calibration.yaml  test_goal_planned_config.yaml  test_goal_publishers_config.yaml
launch/: collision_view_ur.launch.py  simple_moveit.launch.py  test_scaled_joint_trajectory_controller.launch copy.py  test_scaled_joint_trajectory_planned.launch.py  ur_control.launch.py  ur_moveit.launch.py  view_ur.launch.py  view_urdf.launch.py
rviz/: view_collision_robot.rviz  view_robot.rviz  view_urdf.rviz
scripts/: current_pose.py  end_effector_pose_node.py  example_move.py  proba.py  publisher_joint_trajectory_controller.py  publisher_joint_trajectory_planned.py  remote_DASHBOARD.py  remote_SCRIPT.py  send_and_monitor_trajectory.py  sensors_both.py  sensors_distance.py  sensors_orientation.py  sensors_orientation_arduino.py  sensors_orientation_sim.py  serial_test_arduino_node.py  simple_node.py  socket_server.py  wall_algorithms.py
src/: my_moveit_program.cpp  simple_node.cpp
urdf/: ur.urdf.xacro  ur10e.urdf  ur5e_2f85.urdf
